# fastApiDudu

./: .coverage  README.md  pyproject.toml
fastapidudu/: app.py
tests/: test_app.py
